# reversi-ai-arena

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: rust-ci.yml  slopless.yml  visualizer-ci.yml  workflow-lint.yml
cmd/: README.md
cmd/reversi-gamemaster/: Cargo.toml
cmd/reversi-gamemaster/src/: main.rs
cmd/reversi-kifu-export/: Cargo.toml
cmd/reversi-kifu-export/src/: main.rs
docs/: lessons.md  project-plan.md
docs/design-decisions/: adr.md
docs/issues/: 0001-align-workflow-lint-checkout-pin.md  0002-add-forced-pass-runner-fixtures.md  0003-review-include-pass-kifu-output-format.md  README.md
docs/specs/: README.md  artifact-kifu-export.md  language-toolchain-policy.md  platform-boundary.md  quality-gates.md  repository-structure.md  reversi-ai-player.md  reversi-game-master.md  rust-protocol-compatibility.md  tagged-runner-consumption.md  verification-assets.md  visualizer-architecture.md
e2e/: README.md
e2e/reversi-runner/: Cargo.toml
games/reversi/: Cargo.toml  README.md
internal/: README.md
internal/aiarena-protocol/: Cargo.toml
players/: README.md
players/fixture-bots/: Cargo.toml
players/fixture-bots/src/: lib.rs
players/go-reference/: README.md
players/rust-reference/: Cargo.toml  README.md
players/rust-reference/src/: lib.rs  main.rs
testdata/: README.md
tools/: README.md  rust-ci.sh  workflow-lint.sh
visualizer/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
visualizer/src/: main.ts  style.css
(+30 files in other folders)
