[package]
name = "reversi-rust-reference-player"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "reversi-rust-reference-player"
path = "src/main.rs"

[dependencies]
aiarena-protocol = { path = "../../internal/aiarena-protocol" }
reversi-game = { path = "../../games/reversi" }
serde_json = "1.0"
